--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                     <p>Final-year B.Tech CSE student skilled in full-stack development using React.js, Node.js, and MySQL. Experienced in building RESTful APIs, scalable web apps, and responsive UIs. Strong in Data Structures and cloud basics (AWS). Passionate about DevOps, problem-solving, and agile collaboration.</p>
                     <p>Completed virtual Training Program at JP Morgan, Deloitte, and AWS. Proven ability to learn fast, adapt to new technologies, and deliver real-world tech solutions. I thrive on solving complex problems and creating efficient, user-friendly applications.</p>
                 </div>
-                <img src="c.jpg" alt="Manish Singh Rautela" class="profile-img" loading="lazy">
+                <img src="resume_photo.jpg" alt="Manish Singh Rautela" class="profile-img" loading="lazy">
             </div>
         </section>
 
