--- a/index.html
+++ b/index.html
@@ -853,6 +853,19 @@
                         </div>
                     </div>
                 </div>
+                 <div class="project-card">
+                    <div class="project-img">
+                        <i class="fas fa-cloud-sun"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>Real-Time Weather Tracker</h3>
+                        <p>Developed a Weather Forecasting System using HTML, CSS, JavaScript, and OpenWeatherMap API to provide real-time weather updates based on user input and geolocation.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/MohitSRautela/Weather-" target="_blank"><i class="fab fa-github"></i> View Code</a>
+                            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </section>
 
