--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                         <p>Developed a Weather Forecasting System using HTML, CSS, JavaScript, and OpenWeatherMap API to provide real-time weather updates based on user input and geolocation.</p>
                         <div class="project-links">
                             <a href="https://github.com/MohitSRautela/Weather-" target="_blank"><i class="fab fa-github"></i> View Code</a>
-                            <a href="weather-time-121.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://weather-time-121.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                  </div>
