--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                         <p>Developed Medigo.io, a responsive medical e-commerce website using HTML, CSS, and JavaScript. Implemented features like product listings, shopping cart, and login functionality.</p>
                         <div class="project-links">
                             <a href="https://github.com/MohitSRautela/Medigo.io" target="_blank"><i class="fab fa-github"></i> View Code</a>
-                            <a href="medigo-management.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://medigo-management.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                 </div>
@@ -875,7 +875,7 @@
                         <p>Created a custom language compiler that translates user-defined code into executable form. Gained hands-on experience with syntax parsing, code generation, and compiler logic.</p>
                         <div class="project-links">
                             <a href="https://github.com/MohitSRautela/Weather-" target="_blank"><i class="fab fa-github"></i> View Code</a>
-                            <a href="weather-time-121.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://novalang.netlify.app"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                                  </div>
